--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ compileTestKotlin {
 }
 intellij {
     version '2018.3.3'
-    pluginName 'PubAssist'
+    pluginName 'FlutterPubVersionChecker'
     plugins 'kotlin'
     updateSinceUntilBuild false
 }
