Implements parallel dependency checking via Coroutines
This massively speeds up checking of dependencies if they are not cached (e.g. the first time opening a project).

On a sample project with ~20 dependencies this only takes a second or 2 where as previously the UI would hang for 10+ seconds.

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     compile 'com.google.code.gson:gson:2.8.5'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.2'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.2.2'
 }
 
 compileKotlin {
