--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.jetbrains.intellij' version '0.4.8'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.30'
+    id 'org.jetbrains.intellij' version '0.4.15'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'pubversionchecker'
@@ -11,8 +11,8 @@ repositories {
 }
 
 dependencies {
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    compile 'com.google.code.gson:gson:2.8.5'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61'
+    compile 'com.google.code.gson:gson:2.8.6'
     compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.2'
     compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.2.2'
 }
@@ -23,9 +23,10 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
 intellij {
-    version '2018.3.3'
+    version '2019.3.1'
     pluginName 'FlutterPubVersionChecker'
-    plugins 'kotlin'
+    plugins 'yaml','java'
     updateSinceUntilBuild false
 }
