--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,6 +16,11 @@
     </description>
 
     <change-notes><![CDATA[
+    <h2>1.2.0</h2>
+    <ul>
+    <li>Improved performance of checking dependencies</li>
+    <li>Updated plugin to work with IntelliJ 2019.3.x</li>
+    </ul>
     <h2>1.1.1</h2>
     <ul>
     <li>Added support for dependencies with version code</li>
