--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,6 +19,10 @@
     </description>
 
     <change-notes><![CDATA[
+    <h2>1.2.4</h2>
+    <ul>
+    <li>Fixed crash on the startup</li>
+    </ul>
     <h2>1.2.3</h2>
     <ul>
     <li>Fixed issue with custom hosted url addresses</li>
