--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ pluginVersion = 1.2.6
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 183.5153
-pluginUntilBuild = 212.*
+pluginSinceBuild = 192.*
+pluginUntilBuild = 300
 
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
