Extract string resources

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,7 +31,7 @@
                 parentId="tools"
                 instance="pl.pszklarska.pubversionchecker.settings.AppSettingsConfigurable"
                 id="pl.pszklarska.pubversionchecker.settings.AppSettingsConfigurable"
-                displayName="Flutter Pub Version Checker Settings"/>
+                displayName="Flutter Pub Version Checker"/>
     </extensions>
 
     <!-- Crash reporting -->
